--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/cli": "~15.1.3",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^1.0.7",
     "jasmine-core": "~4.5.0",
     "json-server": "^0.17.3",
     "karma": "~6.4.0",
